quic updates to test
mocking up

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 
 <div>
-<a class="projects" href="print.html">Products</a>
-<a class="projects" href="posters.html">Lookbooks</a>
-<a class="projects" href="publications.html">About</a>
-<a class="projects" href="photovideo.html">Conatact</a>
+<a class="projects" href="print.html">Contacts</a>
+<a class="projects" href="posters.html">About</a>
+<a class="projects" href="publications.html">Lookbooks</a>
+<a class="projects" href="photovideo.html">Products</a>
 
 <!-- <a id="studio" href="Studio.html">STUDIO</a>
 <a id="lab" href="lab.html">LAB</a> -->
 </div>
-<img class="wave" 
-src="imagesportfolio/wave.png">
+<img class="introimage" 
+src="homepageimages/Screen Shot 2020-12-16 at 6.32.17 PM.png">
 
  <!-- <div class="episodes">
 <video width="100%" height="100%" controls>
